--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,6 +7,7 @@
 h1{ 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 38px;
+    color: #DEDEDE;
 }
 h2 { 
     display: flex;
@@ -14,27 +15,41 @@ h2 {
     align-items: center;
     font-family: garamond, serif;
     font-size: 24px;
+    color: #DEDEDE;
 }
+
 h3{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 36px;
+    color: black;
 }
 
 h4 { 
-    font-size: 36px;
+    font-size: 28px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 h5 {
     font-size: 24px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #DEDEDE;
 }
 
+h6 {
+    font-size: 18px;
+}
+
+
+.rubriker{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 36px;
+    color: #DEDEDE;
+}
 #main_page{ 
     display: grid;
     height: 400vh;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 80px 30px 400px 400px 800px 1000px 500px 400px;
+    grid-template-rows: 80px 30px 400px 400px 600px 1100px 600px 400px;
     grid-template-areas: 
     "he he if"   
     "na na na"
@@ -49,32 +64,32 @@ h5 {
 #Lejon { 
     height: auto;
     width: 100%;
-    background-color: #344836;
+    background-color: #1f2a1f;
     padding: 10px;
 }
 
 header{ 
     display: flex;
     grid-area: he;
-    background: #567659;
+    background: #2c3d2e;
     justify-content: flex-end;
     align-items: center;
     padding-right: 30px;
-
 }
 
 #information {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #567659;
+    background: #2c3d2e;
     grid-area: if;
 }
+
 
 #link_om_oss{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
     font-size: 24px;
-    color: black;
+    color: #DEDEDE;
     text-decoration: none;
 }
 #link_om_oss:hover{ 
@@ -84,7 +99,7 @@ header{
 #link_nyhetsbrev {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
     font-size: 24px;
-    color: black;
+    color: #DEDEDE;
     text-decoration: none;
 }
 #link_nyhetsbrev:hover {
@@ -94,54 +109,91 @@ header{
 #link_press {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
     font-size: 24px;
-    color: black;
+    color: #DEDEDE;
     text-decoration: none;
 }
 #link_press:hover {
     text-decoration: underline;
 }
 
-nav{ 
+#nav{ 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     grid-area: na;
-    background: #567659;
-    border-bottom: 10px;
-    border-color: #344836; 
+    background: #2c3d2e;
 }
 
 
 #section_lejon{ 
     grid-area: sl;
-    background: antiquewhite;
 }
 
 #oppetider {
     grid-area: op;
     display: flex;
-    background: antiquewhite;
-    border-top: solid #344836;
+    background: #344635;
+    border-top: solid #1f2a1f;
     border-width: 10px;
+    padding: 20px;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 #oppetider_ruta{
     display: flex;
-    width: 800px;
-    height: 200px;
-    border: 3px solid black;   
+    width: 300px;
+    height: 490px;
+    border: 3px solid #1f2a1f; 
+    flex-direction: column;  
+    justify-content: space-between;
+    padding: 10px;
+    color: #DEDEDE;
+    
 }
+
+#information_bild{
+    width: auto;
+    height: 100%;
+}
+
+#information_rutor {
+    display: flex;
+    flex-direction: column;
+}
+
+.information_ruta {
+    display: flex;
+    width: 600px;
+    height: 150px;
+    background-color: white;
+    border: solid #1f2a1f;
+    margin: 10px;
+}
+#datum {
+    font-size: 14px;
+}
+#information_text {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 5px;
+}
+
 #nyheter {
     grid-area: ny;
     display: flex;
-    background: antiquewhite;
-    border-top: solid #bdb296;
-    border-width: 5px;
+    background: #344635;
+    border-top: solid #1f2a1f;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
-#Lizard_bild {
+#nyheter_bild{
     width: auto;
     height: 100%;
 }
@@ -152,22 +204,26 @@ nav{
     height: 250px;
     background-color: white;
     margin: 40px; 
-    justify-content: space-evenly;
 }
-
+#datum {
+    font-size: 14px;
+}
 #nyheter_text {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    justify-content: space-evenly;
     padding: 5px;
 }
+
 #utforska {
     grid-area: va;
     display: flex;
-    background: antiquewhite;
-    border-top: solid #bdb296;
+    background: #344635;
+    border-top: solid #1f2a1f;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
+    justify-content: center; 
 }
 
 #utforska_rutor {
@@ -177,36 +233,57 @@ nav{
     align-items: center;
 }
 
+.aktivitets_ruta_bild {
+    display: flex;
+    width: 300px;
+    height: 300px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    flex-direction: column;
+}
+
+#utforska_text {
+    display: flex;
+    padding: 5px;
+    height: 100px;
+    width: 300px;
+    flex-direction: column;
+    justify-content: center;
+   
+}
+
 .aktivitets_ruta {
     display: flex;
     width: 300px;
     height: 400px;
-    border: 3px solid black;
+    background-color: white;
+    border-color: #1f2a1f;
     border-radius: 30px;
     margin: 50px;
     flex-direction: column;
+    
 }
 
 footer{ 
     display: flex;
     grid-area: fo;
     width: 100%;
-    background: #ddcfad;
-    border-top: 3px solid #bdb296;
+    background: #435b45;
+    border-top: 3px solid #1f2a1f;
     padding: 50px;
     flex-direction: column;
+    color: #DEDEDE;
 }
 
 #container{ 
     display: grid;
     height: 300vh;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 80px 30px 250px 80px 1100px 400px;
+    grid-template-rows: 80px 30px 500px 1180px 400px;
     grid-template-areas: 
     "he he if"   
     "na na na"
     "om om om"
-    "vi vi vi"
     "sa sa sa"
     "fo fo fo";
 }
@@ -214,21 +291,26 @@ footer{
 #Om_oss{ 
     display: flex;
     grid-area: om;
-    background: antiquewhite;
-    flex-wrap: wrap;
-    justify-content: center;
-    border-top: 10px solid #344836;
-}
-
-.text_p { 
-    display: flex;
-    margin-block-start: 1rem;
-    margin-block-end: 1rem;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    background: #344635;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-top: 10px solid #1f2a1f;
+    padding: 30px;
+    
+}
 
+#text_om_oss { 
+    display: flex;
+    width: 900px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border: solid #1f2a1f;
+    background-color: #425943;
+    padding: 30px;
+    margin: 20px;
+    color: #DEDEDE;
 }
 
 p{
@@ -245,91 +327,195 @@ p{
     align-items: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.5rem;
-    color: black;
+    color: #DEDEDE;
     text-decoration: none;
 }
 
-#section_anställda{
+#section_anstallda{
     display: flex;
     grid-area: sa;
-    background: antiquewhite;
+    background: #344635;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 #vi_som_jobbar_har {
-    grid-area: vi;
-    background-color: antiquewhite;
-    align-items: center;
+    display: flex;
+    background-color: #344635;
     justify-content: center;
-    
-
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 #Kontakta_oss { 
     display: block;
     margin-block-start: 2rem;
-    color: black;
+    color: #DEDEDE;
 }
 
 .arbetare {
     display: flex;
     width: 300px;
-    height: 400px;
-    border: 3px solid black;
+    height: 450px;
+    border: 3px solid #1f2a1f;
+    background-color: white;
     flex-direction: column ;
     align-items: center;
     justify-content: flex-start;
     margin: 30px; 
+    border-radius: 30px;
+}
+
+#arbetare_text {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
 }
     
 #bild_anställd { 
     height: auto;
     width: 100%;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid #1f2a1f;
+    border-top-left-radius: 27px;
+    border-top-right-radius: 27px;
 }
 
 #resturang_sida {
     display: grid;
-    height: 150vh;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 70px 50px 450px 400px;
+    height: 400vh;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 80px 30px 800px 800px 800px 800px 800px 400px;
     grid-template-areas: 
-    "hr hr"   
-    "vm vm"
-    "vr vr"
-    "fo fo";
+    "hr hr if"   
+    "na na na"   
+    "fr fr fr"
+    "vr vr vr"
+    "ef ef ef"
+    "ba ba ba"
+    "dr dr dr"
+    "fo fo fo";
 }
 
 #resturang_header {
-    display: grid;
+    display: flex;
     grid-area: hr;
-    background: #567659;
-    border-bottom: 10px solid #344836;
+    background: #2c3d2e;
     justify-content: center;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 30px;
 }
 
-#var_meny {
+#resturang_information {
     display: flex;
-    grid-area: vm;
-    background: antiquewhite;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    border-bottom: 3px solid black;
+    background: #2c3d2e ;
+    grid-area: if;
+
 }
+
+#resturang_nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-area: na;
+    background: #2c3d2e;
+}
+
 
 #johanneberg_hemlank{
     font-size: 42px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
-    color: black;
+    color: #DEDEDE;
 }
 
-#vara_ratter {
+#forratter {
+    display: flex;
+    grid-area: fr;
+    background-color: #344635;
+    justify-content: center;
+}
+
+#meny_header {
+    display: flex;
+    font-size: 36px;
+    color: #DEDEDE;
+    justify-content: flex-start;
+    background: #3a4e3b;
+    margin: 20px;
+    padding: 10px;
+    border-bottom: 3px solid #DEDEDE;
+}
+
+#matratt_ruta{
+    display: flex;
+    width: 1400px;
+    height: 600px;
+    background-color: #3a4e3b;
+    padding: 20px;
+    margin: 40px; 
+    flex-direction: column;
+}
+
+#mat {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+
+#varmratter {
     display: flex;
     grid-area: vr;
-    flex-direction: column;
-    align-items: center;
-    padding: 50px;
+    background: #344635;
+}
+
+.mat_ratter {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #3a4e3b;
+    padding: 20px;
+    height: 220px;
+    width: 600px;
+}
+
+.mat_ratter:hover {
+    background-color: #486149;
+}
+
+#mat_text { 
+    font-size: 24px;
+    color: #DEDEDE;
+}
+
+h7{
+    font-size: 28px;
+    color: #DEDEDE;
+}
+
+#dessert {
+    display: flex;
+    grid-area: ef;
+    background: #344635;
+}
+#barn_meny {
+    display: flex;
+    grid-area: ba;
+    background: #344635;
+}
+
+#dricka {
+    display: flex;
+    grid-area: dr;
+    background: #344635;
 }
 
 
